feat: add header markup and styles

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,47 @@
   <link rel="stylesheet" href="../css/main.css">
   <title>KiwiTaxi Quiz</title>
 </head>
-<body>
-  <header></header>
-  <main>
-    <section>
 
-    </section>
+<body>
+  <header>
+    <div class="nav-wrapper navbar-wrapper--fixed">
+      <div class="logo logo--margin">
+        <a href="/">
+          <div class="logo-img"></div>
+        </a>
+      </div>
+      <nav class="navbar">
+        <div class="menu menu--margin">
+          <a href="#">
+            <span class="menu__item-label">Для клиентов</span>
+            <span class="menu__item-arrow menu__item-arrow--padding"></span>
+          </a>
+          <a href="#">
+            <span class="menu__item-label">Для партнёров</span>
+            <span class="menu__item-arrow menu__item-arrow--padding"></span>
+          </a>
+          <a href="#">
+            <span class="menu__item-label">Аренда авто с водителем</span>
+          </a>
+          <a href="#">
+            <span class="menu__item-label">Детский трансфер</span>
+          </a>
+        </div>
+        <div class="dropdown">
+          <a class="dropdown-currency dropdown-currency--margin">
+            <span class="dropdown-currency__label">RUB</span>
+          </a>
+          <a class="dropdown-country">
+            <span class="dropdown-country__flag"></span>
+          </a>
+          <div class="dropdown__separator"></div>
+          <a class="dropdown__help" target="_blank" href="/help">Помощь</a>
+          <button class="login-btn">Войти</button>
+        </div>
+      </nav>
+  </div>
+  </header>
+  <main>
   </main>
 </body>
 </html>
