feat: done all question blocks and checkout block

--- a/index.html
+++ b/index.html
@@ -105,6 +105,215 @@
           </div>
         </div>
       </article>
+      <article id="questions2" class="questions-block">
+        <div class="questions-wrapper">
+          <div class="progress progress--margin">
+            <div class="progress-line">
+              <div class="progress-line__num progress-line--active">1</div>
+              <div class="progress-line__line progress-line--active"></div>
+            </div>
+            <div class="progress-line">
+              <div class="progress-line__num progress-line--active">2</div>
+              <div class="progress-line__line progress-line--active"></div>
+            </div>
+            <div class="progress-line">
+              <div class="progress-line__num">3</div>
+              <div class="progress-line__line"></div>
+            </div>
+          </div>
+          <div class="introduction introduction--margin">
+            <p>Расскажите о предстоящей поездке</p>
+            <p>Все ответы строго конфиденциальны и не передаются третьим лицам.</p>
+          </div>
+          <div class="question-wrapper">
+            <div class="question-block">
+              <p class="question">1. На каком этапе путешествия вы находитесь?</p>
+              <div class="question-buttons__wrapper">
+                <div class="question-button question-button__active"><p>Собираюсь в поездку</p></div>
+                <div class="question-button"><p>Уже в поездке/путешествии</p></div>
+                <div class="question-button"><p>Возвращаюсь домой</p></div>
+              </div>
+            </div>
+          </div>
+          <div class="next">
+            <button class="next-btn">Далее</button>
+          </div>
+        </div>
+      </article>
+      <article id="questions3" class="questions-block">
+        <div class="questions-wrapper">
+          <div class="progress progress--margin">
+            <div class="progress-line">
+              <div class="progress-line__num progress-line--active">1</div>
+              <div class="progress-line__line progress-line--active"></div>
+            </div>
+            <div class="progress-line">
+              <div class="progress-line__num progress-line--active">2</div>
+              <div class="progress-line__line progress-line--active"></div>
+            </div>
+            <div class="progress-line">
+              <div class="progress-line__num progress-line--active">3</div>
+              <div class="progress-line__line progress-line--active"></div>
+            </div>
+          </div>
+          <div class="question-wrapper">
+            <div class="question-block">
+              <p class="question">1. Это ваша первая поездка в (место назначения)?</p>
+              <div class="question-buttons__wrapper">
+                <div class="question-button question-button__active"><p>Да</p></div>
+                <div class="question-button"><p>Нет, регулярно сюда приезжаю</p></div>
+                <div class="question-button"><p>Нет, был пару раз</p></div>
+              </div>
+            </div>
+            <div class="question-block">
+              <p class="question">2. На сколько дней вы едете?</p>
+              <div class="question-buttons__wrapper">
+                <div class="question-button"><p>2 — 3 дня</p></div>
+                <div class="question-button"><p>На неделю</p></div>
+                <div class="question-button"><p>10 — 20 дней</p></div>
+                <div class="question-button"><p>Более месяца</p></div>
+              </div>
+            </div>
+            <div class="question-block">
+              <p class="question">3. Какие у вас интересы в поездке?</p>
+              <div class="question-buttons__wrapper question-buttons__wrapper--two-lines">
+                <div class="question-button"><p>Посетить музеи</p></div>
+                <div class="question-button"><p>Сходить в модные кафе</p></div>
+                <div class="question-button"><p>Экстремальные аттракционы</p></div>
+                <div class="question-button"><p>Лежать на пляже</p></div>
+                <div class="question-button"><p>Работа</p></div>
+              </div>
+            </div>
+            <div class="question-block">
+              <p class="question">4. С кем вы едете в поездку</p>
+              <div class="question-buttons__wrapper question-buttons__wrapper--two-lines">
+                <div class="question-button"><p>Один</p></div>
+                <div class="question-button"><p>Со второй половинкой</p></div>
+                <div class="question-button"><p>Всей семьей</p></div>
+                <div class="question-button"><p>Компанией</p></div>
+                <div class="question-button"><p>Один/одна с ребенком</p></div>
+              </div>
+            </div>
+            <div class="question-block">
+              <p class="question question--no-margin">5. В какой город держите путь?</p>
+              <p class="question__confidential">Все ответы строго конфиденциальны и не передаются третьим лицам.</p>
+              <form method="GET" action="#" name="city">
+                <input type="text" name="city" class="question-block__city" placeholder="Barcelona" required>
+              </form>
+            </div>
+          </div>
+          <div class="next">
+            <button class="next-btn">Отправить</button>
+          </div>
+        </div>
+      </article>
+      <article id="questions4" class="questions-block">
+        <div class="questions-wrapper">
+          <div class="progress progress--margin">
+            <div class="progress-line">
+              <div class="progress-line__num progress-line--active">1</div>
+              <div class="progress-line__line progress-line--active"></div>
+            </div>
+            <div class="progress-line">
+              <div class="progress-line__num progress-line--active">2</div>
+              <div class="progress-line__line progress-line--active"></div>
+            </div>
+            <div class="progress-line">
+              <div class="progress-line__num progress-line--active">3</div>
+              <div class="progress-line__line progress-line--active"></div>
+            </div>
+          </div>
+          <div class="question-wrapper">
+            <div class="question-block">
+              <p class="question">1. Какие у вас интересы в поездке?</p>
+              <div class="question-buttons__wrapper question-buttons__wrapper--two-lines">
+                <div class="question-button question-button__active"><p>Посетить музеи</p></div>
+                <div class="question-button"><p>Посмотреть достопримечательности</p></div>
+                <div class="question-button"><p>Сходить в модные кафе</p></div>
+                <div class="question-button"><p>Экстремальные аттракционны</p></div>
+                <div class="question-button"><p>Лежать на пляже</p></div>
+                <div class="question-button"><p>Работа</p></div>
+              </div>
+            </div>
+            <div class="question-block">
+              <p class="question">2. С кем вы едете в поездку</p>
+              <div class="question-buttons__wrapper question-buttons__wrapper--two-lines">
+                <div class="question-button"><p>Один</p></div>
+                <div class="question-button"><p>Со второй половинкой</p></div>
+                <div class="question-button"><p>Всей семьей</p></div>
+                <div class="question-button"><p>Компанией</p></div>
+                <div class="question-button"><p>Один/одна с ребенком</p></div>
+              </div>
+            </div>
+            <div class="question-block">
+              <p class="question question--no-margin">3. В какой город держите путь?</p>
+              <p class="question__confidential">Например, если у вас трансфер/такси в Барселону, а потом вы планируете ехать в Салоу, то напишите Салоу.</p>
+              <form method="GET" action="#" name="city">
+                <input type="text" name="city" class="question-block__city" placeholder="Barcelona" required>
+              </form>
+            </div>
+          </div>
+          <div class="next">
+            <button class="next-btn">Отправить</button>
+          </div>
+        </div>
+      </article>
+      <article id="questions5" class="questions-block">
+        <div class="questions-wrapper">
+          <div class="progress progress--margin">
+            <div class="progress-line">
+              <div class="progress-line__num progress-line--active">1</div>
+              <div class="progress-line__line progress-line--active"></div>
+            </div>
+            <div class="progress-line">
+              <div class="progress-line__num progress-line--active">2</div>
+              <div class="progress-line__line progress-line--active"></div>
+            </div>
+            <div class="progress-line">
+              <div class="progress-line__num progress-line--active">3</div>
+              <div class="progress-line__line progress-line--active"></div>
+            </div>
+          </div>
+          <div class="question-wrapper">
+            <div class="question-block">
+              <p class="question">1. С кем вы едете в поездку</p>
+              <div class="question-buttons__wrapper question-buttons__wrapper--two-lines">
+                <div class="question-button question-button__active"><p>Один</p></div>
+                <div class="question-button"><p>Со второй половинкой</p></div>
+                <div class="question-button"><p>Всей семьей</p></div>
+                <div class="question-button"><p>Компанией</p></div>
+                <div class="question-button"><p>Один/одна с ребенком</p></div>
+              </div>
+            </div>
+            <div class="question-block">
+              <p class="question question--no-margin">2. В какой город держите путь?</p>
+              <p class="question__confidential">Например, если у вас трансфер/такси в Барселону, а потом вы планируете ехать в Салоу, то напишите Салоу.</p>
+              <form method="GET" action="#" name="city">
+                <input type="text" name="city" class="question-block__city" placeholder="Barcelona" required>
+              </form>
+            </div>
+          </div>
+          <div class="next">
+            <button class="next-btn">Отправить</button>
+          </div>
+        </div>
+      </article>
+      <article id="checkout" class="checkout-block">
+        <div class="checkout__wrapper">
+          <div class="heart">
+            <div class="heart__img"></div>
+            <p class="heart__text">Спасибо!</p>
+          </div>
+          <div class="bye">
+            <p>Все ответы записаны.</p>
+            <p>Мы отправим вам на почту варианты экскурсий и других услуг по выгодной цене,</p>
+            <p>которые подходят вашему типу отдыха.</p>
+          </div>
+          <div class="next">
+            <button class="next-btn">Закрыть</button>
+          </div>
+        </div>
+      </article>
     </section>
   </main>
 </body>
