feat: add media queries

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <div class="nav-wrapper navbar-wrapper--fixed">
+    <div class="nav-wrapper">
       <div class="logo logo--margin">
         <a href=""></a>
       </div> 
@@ -43,6 +43,7 @@
           <a class="dropdown__help" target="_blank" href="/help">Помощь</a>
           <button class="login-btn">Войти</button>
         </div>
+        <div class="burger"></div>
       </nav>
   </div>
   </header>
@@ -87,7 +88,7 @@
             </div>
             <div class="question-block">
               <p class="question">3. Вы пользуетесь онлайн-сервисами и тревел-приложениями за рубежом?</p>
-              <div class="question-buttons__wrapper question-buttons__wrapper--two-lines">
+              <div class="question-buttons__wrapper">
                 <div class="question-button"><p>Нет, плохо в этом разбираюсь</p></div>
                 <div class="question-button"><p> Стараюсь все заказать заранее, но при необходимости разберусь</p></div>
                 <div class="question-button"><p>Всегда без проблем</p></div>
@@ -106,6 +107,13 @@
         </div>
       </article>
       <article id="questions2" class="questions-block">
+        <div class="nav-arrows">
+          <div class="back-wrapper" id='back'>
+            <div class="back-arrow"></div>
+            <p class="back-text">Назад</p>
+          </div>
+          <div class="close" id="close"></div>
+        </div>
         <div class="questions-wrapper">
           <div class="progress progress--margin">
             <div class="progress-line">
@@ -141,6 +149,13 @@
         </div>
       </article>
       <article id="questions3" class="questions-block">
+        <div class="nav-arrows">
+          <div class="back-wrapper" id='back'>
+            <div class="back-arrow"></div>
+            <p class="back-text">Назад</p>
+          </div>
+          <div class="close" id="close"></div>
+        </div>
         <div class="questions-wrapper">
           <div class="progress progress--margin">
             <div class="progress-line">
@@ -176,7 +191,7 @@
             </div>
             <div class="question-block">
               <p class="question">3. Какие у вас интересы в поездке?</p>
-              <div class="question-buttons__wrapper question-buttons__wrapper--two-lines">
+              <div class="question-buttons__wrapper">
                 <div class="question-button"><p>Посетить музеи</p></div>
                 <div class="question-button"><p>Сходить в модные кафе</p></div>
                 <div class="question-button"><p>Экстремальные аттракционы</p></div>
@@ -186,7 +201,7 @@
             </div>
             <div class="question-block">
               <p class="question">4. С кем вы едете в поездку</p>
-              <div class="question-buttons__wrapper question-buttons__wrapper--two-lines">
+              <div class="question-buttons__wrapper">
                 <div class="question-button"><p>Один</p></div>
                 <div class="question-button"><p>Со второй половинкой</p></div>
                 <div class="question-button"><p>Всей семьей</p></div>
@@ -208,6 +223,13 @@
         </div>
       </article>
       <article id="questions4" class="questions-block">
+        <div class="nav-arrows">
+          <div class="back-wrapper" id='back'>
+            <div class="back-arrow"></div>
+            <p class="back-text">Назад</p>
+          </div>
+          <div class="close" id="close"></div>
+        </div>
         <div class="questions-wrapper">
           <div class="progress progress--margin">
             <div class="progress-line">
@@ -226,7 +248,7 @@
           <div class="question-wrapper">
             <div class="question-block">
               <p class="question">1. Какие у вас интересы в поездке?</p>
-              <div class="question-buttons__wrapper question-buttons__wrapper--two-lines">
+              <div class="question-buttons__wrapper">
                 <div class="question-button question-button__active"><p>Посетить музеи</p></div>
                 <div class="question-button"><p>Посмотреть достопримечательности</p></div>
                 <div class="question-button"><p>Сходить в модные кафе</p></div>
@@ -237,7 +259,7 @@
             </div>
             <div class="question-block">
               <p class="question">2. С кем вы едете в поездку</p>
-              <div class="question-buttons__wrapper question-buttons__wrapper--two-lines">
+              <div class="question-buttons__wrapper">
                 <div class="question-button"><p>Один</p></div>
                 <div class="question-button"><p>Со второй половинкой</p></div>
                 <div class="question-button"><p>Всей семьей</p></div>
@@ -259,6 +281,13 @@
         </div>
       </article>
       <article id="questions5" class="questions-block">
+        <div class="nav-arrows">
+          <div class="back-wrapper" id='back'>
+            <div class="back-arrow"></div>
+            <p class="back-text">Назад</p>
+          </div>
+          <div class="close" id="close"></div>
+        </div>
         <div class="questions-wrapper">
           <div class="progress progress--margin">
             <div class="progress-line">
@@ -277,7 +306,7 @@
           <div class="question-wrapper">
             <div class="question-block">
               <p class="question">1. С кем вы едете в поездку</p>
-              <div class="question-buttons__wrapper question-buttons__wrapper--two-lines">
+              <div class="question-buttons__wrapper">
                 <div class="question-button question-button__active"><p>Один</p></div>
                 <div class="question-button"><p>Со второй половинкой</p></div>
                 <div class="question-button"><p>Всей семьей</p></div>
