fix: margins, block spaces on mobile and tablet versions

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <p class="question">3. Вы пользуетесь онлайн-сервисами и тревел-приложениями за рубежом?</p>
               <div class="question-buttons__wrapper">
                 <div class="question-button"><p>Нет, плохо в этом разбираюсь</p></div>
-                <div class="question-button"><p> Стараюсь все заказать заранее, но при необходимости разберусь</p></div>
+                <div class="question-button question-button--max-width"><p> Стараюсь все заказать заранее, но при необходимости разберусь</p></div>
                 <div class="question-button"><p>Всегда без проблем</p></div>
               </div>
             </div>
@@ -132,7 +132,7 @@
             <p>Все ответы строго конфиденциальны и не передаются третьим лицам.</p>
           </div>
           <div class="question-wrapper">
-            <div class="question-block">
+            <div class="question-block question-block--margin">
               <p class="question">1. На каком этапе путешествия вы находитесь?</p>
               <div class="question-buttons__wrapper">
                 <div class="question-button question-button__active" id='prepare'><p>Собираюсь в поездку</p></div>
